horizontal scrollbar fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ video {
   background-repeat: no-repeat;
   background-size:cover;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding-top: 5vh;
   text-align: center;
   color: #FFFFFF
@@ -50,7 +50,7 @@ video {
   padding-top: 4vh;
   text-align: center;
   height: 2000px;
-  width: 100vw;
+  width: 100%;
   color: #FFFFFF
 }
 
@@ -59,6 +59,10 @@ video {
     top: 40%;
     left: 50%;
     color: #FFFFFF
+}
+
+.navbar{
+  width:100%;
 }
 
 body {
